--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
