API Image upload

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dkdsff1e9",
+    "ApiKey": "658511374937148",
+    "ApiSecret": "MroN2TTQZhCbiaXk7v1mElGqXWM"
+  },
   "AllowedHosts": "*"
 }
