--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@hookform/resolvers": "^5.0.1",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/icons-material": "^6.4.11",
     "@mui/material": "^6.3.0",
     "@mui/x-date-pickers": "^8.4.0",
